--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "jquery-plugin",
+  "name": "Validatr",
   "version": "0.0.0-ignored",
   "engines": {
-    "node": ">= 0.6.0"
-  },
-  "scripts": {
-    "test": "grunt qunit"
+    "node": ">= 0.8.0"
   },
   "devDependencies": {
-    "grunt": "~0.3.17",
-    "grunt-contrib": "~0.3.0"
+    "grunt": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-jshint": "~0.1.1",
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-watch": "~0.2.0",
+    "grunt-contrib-cssmin": "~0.4.1"
   }
 }
