--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.4.1"
+    "grunt-contrib-cssmin": "~0.4.1",
+    "grunt-contrib-compress": "~0.4.0"
   }
 }
