--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-contrib-cssmin": "~0.4.1",
-    "grunt-contrib-compress": "~0.4.0"
+    "grunt-contrib-compress": "~0.4.0",
+    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-contrib-copy": "~0.4.0"
   }
 }
